# BadgerOS-Kernel

./: .gitignore  .gitmodules  CMakeLists.txt  Cargo.toml  Makefile  README.md  build.rs  log.txt  lsusb.txt  openocd.cfg  openocd.cfg.2  openocd.cfg.3  rust-toolchain.toml
common/idk/: mlibc-config.h
common/include/: errno.h  fcntl.h  syscall_defs.inc
common/include.bak/: signal.h
cpu/riscv64/: CMakeLists.txt
cpu/x86_64/: CMakeLists.txt
docs/: README.md
files/: CMakeLists.txt  init.c  start.S  test2.c  util.c  util.h
include/: filesystem.h  rust_bindgen_wrapper.h  smp.h  syscall.h
include/badgelib/: arrays.h  badge_strings.h  list.h  log.h  radixtree.h
include/badgeros-abi/: errno.h  nlink_t.h  pid_t.h  sigval.h  uid_t.h  useconds_t.h  wait.h
include/device/: device.h
include/mem/: pmm.h  vmm.h
include/process/: process.h
include/sched/: waitlist.h
kernel/: CMakeLists.txt  Cargo.toml  Makefile  build.rs  image_limine.cmake
kernel/.cargo/: config.toml
kernel/include/: rust_bindgen_wrapper.h  syscall_defs.inc
kernel/misc/: gdbinit
kernel/src/: errno.c  ktest.rs  lib.rs  main.c  syscall.c  time.c
lib/dtb/: Cargo.toml
misc/: systab.csv  systype.csv
misc/ld/: riscv64.ld  x86_64.ld
src/: errno.c  kparam.rs  ktest.rs  lib.rs  smp.c.bak
src/badgelib/: badge_strings.c  fifo.rs  list.c  mod.rs  radixtree.c  time.rs
src/bindings/: error.rs  log.rs  mod.rs
src/boot/: init.rs  limine.c  limine.rs  mod.rs  spinup.rs
src/dev2/: addr.rs  bus.rs  device.rs  driver.rs  mod.rs  node.rs  probe.rs  registry.rs  void.rs
src/device/: builtin_drivers.c  device.c  uacpi_kernel_api.c
src/driver2/: mod.rs  ns16550.rs  ns16550a.rs  riscv_plic.rs
src/filesystem/: device.rs  fifo.rs  media.rs  mod.rs  mount.rs  mount_root.rs  ramfs.rs  sysimpl.rs  test.rs  vfs.rs
src/kernel/: cpulocal.rs  mod.rs  smp.rs  sysimpl.rs
src/malloc/: malloc.c  static-buddy-compat.c
src/mem/: dma.rs  mod.rs  pagecache.rs  sysimpl.rs
src/misc/: kmodule.rs  kparam.rs  mod.rs  panic.rs
src/process/: c_api.rs  files.rs  mod.rs  signal.rs  syscall.rs  sysimpl.rs  usercopy.rs
src/sys/: mod.rs  sysimpl.rs
src/util/: bitset.rs  id_alloc.rs  list.rs  (+2 more)
tools/: selarch.py  sysgen.py
(+298 files in other folders)
