[package]
name = "kernel"
version = "0.1.0"
edition = "2024"

[features]
# Uses a custom framework to perform various unit tests in-kernel.
ktest = []
dtb = []
acpi = []
dlist_debug = []

[lib]
crate-type = ["staticlib"]
test = false

[dependencies]
bytemuck = "1.23.0"
bytemuck_derive = "1.10.2"
chrono = { version="0.4.41", default-features=false }
compile-time = "0.2.0"
crc = "3.3.0"
num = { version="0.4.3", default-features=false }
static_assertions = "1.1.0"
tock-registers = "0.9.0"
uuid = { version="1.18.1", default-features=false, features=["serde"] }

[build-dependencies]
bindgen = "0.72.1"

[profile.dev]
panic = "abort"
lto = false

[profile.dev.package."*"]
opt-level = 2

[profile.dev.package.kernel]
opt-level = 1
debug = true

[profile.release]
panic = "abort"
opt-level = 2
